@@ -1,0 +1,3 @@
+[D-BUS Service]
+Name=org.gnome.Xchat
+Exec=@bindir@/xchat-gnome
