@@ -1,3 +1,12 @@
+Wed Aug 30 21:35:39 CEST 2006  Guillaume Desmottes <cass@skynet.be>
+
+	* src/common/dbus/dbus-client.h:
+	* src/common/dbus/org.gnome.Xchat.service.in:
+	* src/common/dbus/dbus-plugin.xml:
+	* src/common/dbus/dbus-client.c:
+	* src/common/dbus/remote-object.xml:
+	  - Add missing files from sync.
+
 Wed Aug 30 21:09:24 CEST 2006  Guillaume Desmottes <cass@skynet.be>
 
 	* src/common/outbound.c:
